[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Game/UI/Dialogs/NotebookDialog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game/UI/Dialogs/PreviewDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Cabin/Cabin-Regular.tres" type="DynamicFont" id=3]

[node name="NotebookDialog" type="WindowDialog"]
margin_right = 700.0
margin_bottom = 450.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 450.0
scroll_horizontal_enabled = false

[node name="PageListContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
margin_right = 150.0
margin_bottom = 39.0
rect_min_size = Vector2( 150, 0 )

[node name="PageList" type="ItemList" parent="HBoxContainer/ScrollContainer/PageListContainer"]
margin_right = 150.0
margin_bottom = 9.0
auto_height = true

[node name="NewPageButton" type="Button" parent="HBoxContainer/ScrollContainer/PageListContainer"]
margin_top = 13.0
margin_right = 150.0
margin_bottom = 39.0
text = "+ New Page"
clip_text = true

[node name="PageContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 154.0
margin_right = 700.0
margin_bottom = 450.0
size_flags_horizontal = 3

[node name="TitleContainer" type="HBoxContainer" parent="HBoxContainer/PageContainer"]
margin_right = 546.0
margin_bottom = 30.0

[node name="TitleEdit" type="LineEdit" parent="HBoxContainer/PageContainer/TitleContainer"]
margin_right = 472.0
margin_bottom = 30.0
size_flags_horizontal = 3
max_length = 100
editable = false
placeholder_text = "Title"

[node name="PublicCheckBox" type="CheckBox" parent="HBoxContainer/PageContainer/TitleContainer"]
margin_left = 476.0
margin_right = 546.0
margin_bottom = 30.0
hint_tooltip = "When ticked, this page will be visible to other players."
disabled = true
text = "Public"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/PageContainer"]
margin_top = 34.0
margin_right = 546.0
margin_bottom = 390.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
readonly = true
wrap_enabled = true

[node name="ImageContainer" type="ScrollContainer" parent="HBoxContainer/PageContainer"]
visible = false
margin_top = 34.0
margin_right = 546.0
margin_bottom = 390.0
size_flags_vertical = 3
follow_focus = true

[node name="ImageRect" type="TextureRect" parent="HBoxContainer/PageContainer/ImageContainer"]
expand = true

[node name="ZoomContainer" type="HBoxContainer" parent="HBoxContainer/PageContainer"]
margin_top = 394.0
margin_right = 546.0
margin_bottom = 420.0
alignment = 2

[node name="ZoomOutButton" type="Button" parent="HBoxContainer/PageContainer/ZoomContainer"]
margin_left = 420.0
margin_right = 439.0
margin_bottom = 26.0
text = "-"

[node name="ZoomLabel" type="Label" parent="HBoxContainer/PageContainer/ZoomContainer"]
margin_left = 443.0
margin_top = 3.0
margin_right = 523.0
margin_bottom = 23.0
rect_min_size = Vector2( 80, 0 )
text = "100%"
align = 1
clip_text = true

[node name="ZoomInButton" type="Button" parent="HBoxContainer/PageContainer/ZoomContainer"]
margin_left = 527.0
margin_right = 546.0
margin_bottom = 26.0
text = "+"

[node name="ModifyContainer" type="HBoxContainer" parent="HBoxContainer/PageContainer"]
margin_top = 424.0
margin_right = 546.0
margin_bottom = 450.0

[node name="MoveUpButton" type="Button" parent="HBoxContainer/PageContainer/ModifyContainer"]
margin_right = 179.0
margin_bottom = 26.0
size_flags_horizontal = 3
disabled = true
text = "Move Up"

[node name="MoveDownButton" type="Button" parent="HBoxContainer/PageContainer/ModifyContainer"]
margin_left = 183.0
margin_right = 362.0
margin_bottom = 26.0
size_flags_horizontal = 3
disabled = true
text = "Move Down"

[node name="DeleteButton" type="Button" parent="HBoxContainer/PageContainer/ModifyContainer"]
margin_left = 366.0
margin_right = 546.0
margin_bottom = 26.0
size_flags_horizontal = 3
disabled = true
text = "Delete"

[node name="ConfirmDeleteDialog" type="ConfirmationDialog" parent="."]
margin_right = 250.0
margin_bottom = 90.0
window_title = "Delete page?"
dialog_autowrap = true

[node name="TemplateDialog" parent="." instance=ExtResource( 2 )]
window_title = "Templates"
db_types = {
"TEMPLATES": "templates"
}
load_button_text = "Open"

[connection signal="popup_hide" from="." to="." method="_on_NotebookDialog_popup_hide"]
[connection signal="tree_exiting" from="." to="." method="_on_NotebookDialog_tree_exiting"]
[connection signal="item_selected" from="HBoxContainer/ScrollContainer/PageListContainer/PageList" to="." method="_on_PageList_item_selected"]
[connection signal="pressed" from="HBoxContainer/ScrollContainer/PageListContainer/NewPageButton" to="." method="_on_NewPageButton_pressed"]
[connection signal="text_changed" from="HBoxContainer/PageContainer/TitleContainer/TitleEdit" to="." method="_on_TitleEdit_text_changed"]
[connection signal="toggled" from="HBoxContainer/PageContainer/TitleContainer/PublicCheckBox" to="." method="_on_PublicCheckBox_toggled"]
[connection signal="text_changed" from="HBoxContainer/PageContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/PageContainer/ZoomContainer/ZoomOutButton" to="." method="_on_ZoomOutButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PageContainer/ZoomContainer/ZoomInButton" to="." method="_on_ZoomInButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PageContainer/ModifyContainer/MoveUpButton" to="." method="_on_MoveUpButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PageContainer/ModifyContainer/MoveDownButton" to="." method="_on_MoveDownButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PageContainer/ModifyContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="confirmed" from="ConfirmDeleteDialog" to="." method="_on_ConfirmDeleteDialog_confirmed"]
[connection signal="entry_requested" from="TemplateDialog" to="." method="_on_TemplateDialog_entry_requested"]
